@@ -1,3 +1,6 @@
+2/13/13 created ExampleSimView as a container for all view-related stuff (scene graph, dom, browser window,...)
+2/13/13 encapsulated stats.js meter in PerformanceMeter.js
+2/13/13 switch to non-minified stats-r11.js
 2/13/13 Made the millisecond counter for the FPS indicator work.  Broke out the animation loop to make this happen.
 2/12/13 add missing README files, doc
 2/12/13 fix control panel i18n by passing strings to ControlPanel.init
